<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WineTastingDetailFragment"
    >
    <LinearLayout
        android:id="@+id/winetasting_detail_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_margin"
        >
        <!-- Vineyard Name -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/tasting_detail_vineyard_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/vineyard_name"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Wine Name -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/tasting_detail_wine_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/wine_name"
                />
        </android.support.design.widget.TextInputLayout>


        <!-- Varietal -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/tasting_detail_varietal_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/wine_varietal"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Tasting Date -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tasting_date"
            />
        <Button
            android:id="@+id/tasting_detail_tasting_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            tools:text="12/25/15"
            />

        <!-- Rating -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wine_rating"
            />
        <Spinner
            android:id="@+id/tasting_detail_rating_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <!-- Save button -->
        <Button
            android:id="@+id/tasting_detail_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_tasting_title"
            />

    </LinearLayout>
</ScrollView>

