<resources>
    <string name="app_name">Wino</string>
    <string name="title_winetasting_detail">WineTasting Detail</string>

    <!-- Wine type names -->
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="rose">Rosé</string>
    <string name="not_set">(not set)</string>

    <!-- Placeholders -->
    <string name="vineyard_name">Vineyard Name</string>
    <string name="wine_name">Wine Name</string>
    <string name="wine_type">Wine Type</string>
    <string name="tasting_date">Tasting Date</string>
    <string name="wine_varietal">Varietal</string>
    <string name="wine_rating">Rating</string>

    <!-- Button Titles -->
    <string name="save_tasting_title">Save Tasting</string>

    <!-- Ratings -->
    <string-array name="ratings_array">
        <item>Zero</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>

        <!-- TODO: Figure out why these are barfing -->
        <!--<item>\uD83D\uDC4E</item>-->
        <!--<item>\uD83C\uDF1F</item>-->
        <!--<item>\uD83C\uDF1F\uD83C\uDF1F</item>-->
        <!--<item>\uD83C\uDF1F\uD83C\uDF1F\uD83C\uDF1F</item>-->
        <!--<item>\uD83C\uDF1F\uD83C\uDF1F\uD83C\uDF1F\uD83C\uDF1F</item>-->
        <!--<item>\uD83C\uDF1F\uD83C\uDF1F\uD83C\uDF1F\uD83C\uDF1F\uD83C\uDF1F</item>-->
    </string-array>
</resources>
