<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_tasting"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="5"
    >
    <!-- Date -->
    <TextView
        android:id="@+id/row_tasting_date_textview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="12/25/15"
        style="@style/TinyTextView"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        >
        <!-- Wine Name  -->
        <TextView
            android:id="@+id/row_tasting_wine_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="A long wine name goes here"
            style="@style/LargeTextView"
            />

        <!-- Rating -->
        <TextView
            android:id="@+id/row_tasting_wine_rating_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="*****"
            />
    </LinearLayout>
</LinearLayout>